update introductory slides and notebook

--- a/Lecture 1/Introduction.slides.html
+++ b/Lecture 1/Introduction.slides.html
@@ -14429,8 +14429,14 @@ div.jp-OutputPrompt {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="&#4315;&#4317;&#4316;&#4304;&#4330;&#4308;&#4315;&#4311;&#4304;-&#4304;&#4316;&#4304;&#4314;&#4312;&#4322;&#4312;&#4313;&#4304;">&#4315;&#4317;&#4316;&#4304;&#4330;&#4308;&#4315;&#4311;&#4304; &#4304;&#4316;&#4304;&#4314;&#4312;&#4322;&#4312;&#4313;&#4304;<a class="anchor-link" href="#&#4315;&#4317;&#4316;&#4304;&#4330;&#4308;&#4315;&#4311;&#4304;-&#4304;&#4316;&#4304;&#4314;&#4312;&#4322;&#4312;&#4313;&#4304;">&#182;</a></h2><hr>
-<p><strong>მონაცემთა ანალიტიკა</strong> - ეს არის მონაცემების გამოკვლევის, წმენდის, ტრანსფორმაციის და მოდელირების პროცესი რომელიც მიზნად ისახავს მონაცემებიდან ამოიღოს სასარგებლო ინფორმაცია და მიიღოს ამ ინფორმაციაზე დაფუძნებული გადაწყვეტილება.</p>
-<p><img src="images/data_analysis.png" alt="alt text" title="Title"></p>
+<p><strong>მონაცემთა ანალიტიკა</strong> - ეს არის მონაცემების გამოკვლევის და დიაგნოსტირების პროცესი რომელიც მიზნად ისახავს მონაცემებიდან ამოიღოს სასარგებლო ინფორმაცია და მიიღოს ამ ინფორმაციაზე დაფუძნებული გადაწყვეტილება. უფრო კონკრეტულად კი უპასუხოს შემდეგ ორ კითხვას:</p>
+<ul>
+<li><strong>რა მოხდა?</strong></li>
+</ul>
+<ul>
+<li><strong>რატომ მოხდა?</strong></li>
+</ul>
+<p><img src="images/data.png" alt="alt text" title="Title"></p>
 
 </div>
 </div></section></section><section><section>
@@ -14498,6 +14504,8 @@ div.jp-OutputPrompt {
 <ul>
 <li>All deep learning is machine learning, but not all machine learning is deep learning</li>
 </ul>
+<blockquote><p>ყველა საუბრობს,  თუ რატომ უნდა გამოვიყენოთ ღრმა სწავლება, მაგრამ არავინ აღნიშნავს თუ <strong>რატომ არ უნდა გამოვიყენოთ იგი</strong></p>
+</blockquote>
 
 </div>
 </div></section><section>
